<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_lista"
        android:title="@string/menu_lista"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_estadisticas"
        android:title="@string/menu_estadisticas"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_web"
        android:title="Página Web San Pedrito"
        android:icon="@drawable/ic_web"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exportar"
        android:title="@string/menu_exportar"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_configuracion"
        android:title="@string/menu_configuracion"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_acerca"
        android:title="@string/menu_acerca"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never" />

</menu>
